--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,5 +5,12 @@
   "version": "0.0.1",
   "action": {
     "default_icon": "icon.png"
-  }
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ]
 }
