--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "node build.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [
     "youtube",
@@ -17,6 +17,11 @@
   "license": "GPL-3.0-only",
   "devDependencies": {
     "@types/chrome": "^0.0.260",
-    "esbuild": "0.20.0"
+    "esbuild": "0.20.0",
+    "jsdom": "^24.0.0",
+    "vitest": "^1.2.2"
+  },
+  "wallaby": {
+    "testframework": "vitest"
   }
 }
