--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "node build.js",
-    "test": "vitest"
+    "test": "vitest --run"
   },
   "keywords": [
     "youtube",
