--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Test
       run: |
         npm install
-        npm test
+        npm run test:unit
   test-e2e:
     timeout-minutes: 60
     runs-on: ubuntu-latest
@@ -37,7 +37,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx playwright test
+      run: npm run test:e2e
     - uses: actions/upload-artifact@v3
       if: always()
       with:
