chore: split test runing

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "build": "node build.js",
-    "test": "vitest --run"
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:unit": "vitest --run",
+    "test:e2e": "playwright test"
   },
   "keywords": [
     "youtube",
@@ -16,7 +18,9 @@
   "author": "V.Symonenko",
   "license": "GPL-3.0-only",
   "devDependencies": {
+    "@playwright/test": "^1.41.2",
     "@types/chrome": "^0.0.260",
+    "@types/node": "^20.11.18",
     "esbuild": "0.20.0",
     "jsdom": "^24.0.0",
     "vitest": "^1.2.2"
