--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@playwright/test": "^1.41.2",
     "@types/chrome": "^0.0.260",
     "@types/node": "^20.11.18",
+    "dotenv": "^16.4.5",
     "esbuild": "0.20.0",
     "jsdom": "^24.0.0",
     "vitest": "^1.2.2"
