chore(deps): update types

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Run Playwright tests
       run: npm run test:e2e
       env:
-        YOUTUBE_LOGIN: ${{ secrets.YOUTUBE_LOGIN }}
+        YOUTUBE_LOGIN: 'Test loginnnnnnnnn'
         YOUTUBE_PASS: ${{ secrets.YOUTUBE_PASS }}
     - uses: actions/upload-artifact@v3
       if: always()
