--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,3 +47,8 @@ jobs:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+    - name: Upload test results
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results
+        path: playwright/screen/
