--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,8 @@ jobs:
         path: playwright-report/
         retention-days: 30
     - name: Upload test results
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v3
       with:
-        name: test-results
-        path: playwright/screen/
+        name: playwright-screen
+        path: playwright-screen/
+        retention-days: 1
