--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,11 +45,7 @@ jobs:
       if: always()
       with:
         name: playwright-report
-        path: playwright-report/
         retention-days: 30
-    - name: Upload test results
-      uses: actions/upload-artifact@v3
-      with:
-        name: playwright-screen
-        path: playwright-screen/
-        retention-days: 1
+        path: |
+          playwright-report/
+          playwright-screen/
